@@ -18,8 +18,8 @@
  
 package com.owlplug.core.utils;
 
-import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 
 public class UrlUtils {
 
@@ -45,11 +45,7 @@ public class UrlUtils {
    * @return an encoded query parameter
    */
   public static String encodeQuery(String query) {
-    try {
-      return URLEncoder.encode(query, "UTF-8");
-    } catch (UnsupportedEncodingException e) {
-      return null;
-    }
+    return URLEncoder.encode(query, StandardCharsets.UTF_8);
   }
 
 }
